# NLASM

./: .gitignore  demo.nl  pyproject.toml  test_ffi_debug.py  test_python_ffi.py
cli/: __init__.py  nlasm_main.py  repl.py
core/: __init__.py  aot_codegen.py  aot_compiler.py  builtins.py  cfg.py  cfg_builder.py  concurrency.py  debugger.py  decoder.py  dominator.py  embedding_cache.py  entities.py  file_parser.py  frontend.py  inline_cache.py  ir.py  ir_interpreter.py  ir_pattern.py  jit_executor.py  llvm_codegen.py  module_system.py  optimizer.py  package_manager.py  parallel_compiler.py  pattern_database.py  pattern_instantiator.py  pattern_matcher.py  pipeline.py  profiler.py  python_api.py  python_bridge.py  python_transpiler.py  runtime.py  semantic_operators.py  slot_filler.py  slot_types.py  specialization.py  ssa_builder.py  symbol_table.py  tiered_compiler.py  (+1 more)
editor/vscode/nlasm-syntax/: language-configuration.json  package.json
editor/vscode/nlasm-syntax/syntaxes/: nlasm.tmLanguage.json
registry/: server.py
stdlib/: array.nl  dict.nl  file.nl  json.nl  math.nl  os.nl  random.nl  string.nl  time.nl
tests/: test_cfg.py  test_cfg_builder.py  test_dominator.py  test_entities.py  test_frontend.py  test_inline_cache.py  test_instantiator.py  test_ir.py  test_ir_interpreter.py  test_ir_pattern.py  test_jit_performance.py  test_new_features.py  test_optimizer.py  test_pattern_database.py  test_pattern_matcher.py  test_pipeline_e2e.py  test_slot_filler.py  test_slot_types.py  test_ssa_builder.py
