[project]
name = "nlasm-engine"
version = "0.8.0"
description = "Semantic-driven natural language to IR engine"
readme = "NLASM.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "faiss-cpu",
    "sentence-transformers",
    "llvmlite",
    "pytest",
]

[project.scripts]
nlasm = "cli.nlasm_main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
