[project]
name = "nlasm"
version = "0.8.0"
description = "Semantic-driven natural language to IR engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "llvmlite",
]

[project.optional-dependencies]
ml = [
    "faiss-cpu",
    "sentence-transformers",
]
server = [
    "fastapi",
    "uvicorn",
    "python-multipart",
]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.scripts]
nlasm = "cli.nlasm_main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "registry*", "stdlib*"]
exclude = ["models*", "editor*", "tests*"]

[tool.setuptools.package-data]
stdlib = ["*.nl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
